Update: Chrome Extension v1.0.0-alpha with QR Code Donation
- Added CHANGELOG.md and RELEASE_NOTES.md for v1.0.0-alpha
- Added QR code donation section with Saweria integration
- Added 'Jazakumullah Khairan' message for donations
- Updated .gitignore to exclude internal scripts
- Enhanced documentation with comprehensive release notes
- Added assets/qr-saweria.png for donation QR code

Made with ❤️ for UT Toton

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,15 @@ build/
 INSTALLATION.md
 EXTENSION_CONFIG.md
 WEBSTORE_UPLOAD_GUIDE.md
+MANUAL_PUSH_INSTRUCTIONS.md
+
+# Setup scripts (internal use only)
+init-git.sh
+fix-git-config.sh
+check-user-and-setup.sh
+setup-vnot-programming.sh
+MANUAL_SETUP_VNOT_PROGRAMMING.md
+final-git-push.sh
+push-to-github.sh
+update-and-push.sh
+push-with-auth.sh
