Fix: Remove unused 'scripting' permission for Chrome Web Store compliance
- Removed unused 'scripting' permission from manifest.json
- Updated README.md to reflect correct permissions
- Fixed Chrome Web Store policy violation (Purple Potassium)
- Extension now only requests necessary permissions:
  * activeTab: For accessing current page
  * storage: For saving user settings
- Content scripts are injected via manifest content_scripts, not scripting API

Made with ❤️ for UT Toton

--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,7 @@
   "description": "Grab text from UT e-learning platform and generate answers using Gemini AI",
   "permissions": [
     "activeTab",
-    "storage",
-    "scripting"
+    "storage"
   ],
   "host_permissions": [
     "https://elearning.ut.ac.id/*",
