Add PDF Analysis & Penilaian Tab v1.4.0
Major Features:
- Added Tab Penilaian with PDF analysis interface
- PDF.js integration for text extraction from PDFs
- Smart PDF link detection for UT e-learning forum
- AI-powered PDF content analysis and relevance evaluation
- Individual PDF extraction and batch analysis

Technical Implementation:
- Added PDF.js library (pdf.min.js, pdf.worker.min.js)
- Updated manifest.json with PDF.js permissions and web_accessible_resources
- Enhanced background.js with PDF text extraction using PDF.js
- Updated content.js with UT-specific PDF link detection patterns
- Added comprehensive PDF analysis UI in popup.html
- Implemented tab switching system (Main/Penilaian)

PDF Analysis Features:
- Scan PDF links from forum discussions
- Extract text content from PDF attachments
- AI evaluation of PDF relevance to discussion questions
- Individual PDF analysis with detailed feedback
- Batch analysis of all extracted PDFs
- Academic reference evaluation and recommendations

UI/UX Improvements:
- Modern tab-based interface
- Real-time PDF scanning and extraction status
- Detailed PDF analysis results with scoring
- User-friendly PDF management interface
- Responsive design for PDF content display

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "UT E-Learning Text Grabber & AI Assistant",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Grab text from UT e-learning platform and generate answers using Gemini AI",
   "permissions": [
     "activeTab",
@@ -12,7 +12,8 @@
     "https://generativelanguage.googleapis.com/*",
     "https://api.openai.com/*",
     "https://api.anthropic.com/*",
-    "https://api.indobelajar.com/*"
+    "https://api.indobelajar.com/*",
+    "https://*/*"
   ],
   "action": {
     "default_popup": "popup.html",
@@ -28,6 +29,12 @@
   "background": {
     "service_worker": "background.js"
   },
+  "web_accessible_resources": [
+    {
+      "resources": ["lib/pdf.worker.min.js"],
+      "matches": ["<all_urls>"]
+    }
+  ],
   "icons": {
     "16": "icons/icon.png",
     "48": "icons/icon.png",
