Fix PDF.js loading issues in service worker v1.4.1
- Moved PDF processing from background script to content script
- Fixed service worker registration error (Status code: 15)
- PDF.js now loads dynamically in content script context
- Background script delegates PDF extraction to content script
- Updated manifest.json with proper web_accessible_resources
- Service worker no longer uses importScripts or dynamic imports

Technical Changes:
- Removed PDF.js loading from background.js
- Added loadPDFJS() function in content.js
- PDF extraction now happens in content script context
- Background script forwards PDF requests to content script
- Fixed Chrome extension service worker limitations

This resolves the 'Failed to execute importScripts' error and
allows PDF analysis functionality to work properly.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "UT E-Learning Text Grabber & AI Assistant",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "Grab text from UT e-learning platform and generate answers using Gemini AI",
   "permissions": [
     "activeTab",
@@ -31,7 +31,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["lib/pdf.worker.min.js"],
+      "resources": ["lib/pdf.min.js", "lib/pdf.worker.min.js"],
       "matches": ["<all_urls>"]
     }
   ],
